[gd_scene load_steps=6 format=3 uid="uid://cc6g5s32b424k"]

[ext_resource type="Script" uid="uid://osmm1xi6qd1p" path="res://ui/inventory/tooltip/tooltip.gd" id="1_causk"]
[ext_resource type="FontFile" uid="uid://lcx8i0nk6831" path="res://assets/fonts/PixelOperator8.ttf" id="2_hoai8"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_7pwkt"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_xlmgx"]

[sub_resource type="Theme" id="Theme_7at3c"]
/fonts/PixelFont = ExtResource("2_hoai8")
Label/colors/font_color = Color(1, 1, 1, 1)
Label/colors/font_outline_color = Color(0, 0, 0, 1)
Label/colors/font_shadow_color = Color(0, 0, 0, 0)
Label/constants/line_spacing = 3
Label/constants/outline_size = 0
Label/constants/shadow_offset_x = 1
Label/constants/shadow_offset_y = 1
Label/constants/shadow_outline_size = 1
Label/font_sizes/font_size = 16
Label/fonts/font = ExtResource("2_hoai8")
Label/styles/normal = SubResource("StyleBoxEmpty_xlmgx")

[node name="Tooltip" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_causk")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -58.0
grow_horizontal = 2
grow_vertical = 0
theme_override_styles/panel = SubResource("StyleBoxEmpty_7pwkt")

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer"]
layout_mode = 2
theme_override_constants/separation = 0
alignment = 2

[node name="NameContainer" type="PanelContainer" parent="PanelContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="NameBorder" type="ColorRect" parent="PanelContainer/VBoxContainer/NameContainer"]
layout_mode = 2
color = Color(0.852007, 0.546992, 1.73271e-06, 1)

[node name="MarginContainer2" type="MarginContainer" parent="PanelContainer/VBoxContainer/NameContainer"]
layout_mode = 2
theme_override_constants/margin_left = 1
theme_override_constants/margin_top = 1
theme_override_constants/margin_right = 1
theme_override_constants/margin_bottom = 1

[node name="NameBackground" type="ColorRect" parent="PanelContainer/VBoxContainer/NameContainer/MarginContainer2"]
layout_mode = 2
color = Color(0.196078, 0.184314, 0.0784314, 1)

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer/VBoxContainer/NameContainer"]
layout_mode = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 2
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 1

[node name="ItemName" type="Label" parent="PanelContainer/VBoxContainer/NameContainer/MarginContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
text = "asdasdasdasd"
horizontal_alignment = 1

[node name="InfoContainer" type="PanelContainer" parent="PanelContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="Tooltip" type="ColorRect" parent="PanelContainer/VBoxContainer/InfoContainer"]
layout_mode = 2
color = Color(0.243137, 0.129412, 0.0431373, 0.580392)

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer/VBoxContainer/InfoContainer"]
layout_mode = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="ItemInfo" type="RichTextLabel" parent="PanelContainer/VBoxContainer/InfoContainer/MarginContainer"]
unique_name_in_owner = true
layout_mode = 2
theme = SubResource("Theme_7at3c")
bbcode_enabled = true
text = "[right]a[/right]
[center][table=2,center]
[cell]a[/cell][cell][right]a[/right][/cell][/table][/center]"
fit_content = true
scroll_active = false
autowrap_mode = 0
shortcut_keys_enabled = false
deselect_on_focus_loss_enabled = false
drag_and_drop_selection_enabled = false
